# systematics-embeddings

./: .gitignore  Cargo.toml  README.md  download-model.py  start.sh
src/: embedding.rs  index.rs  main.rs
