[package]
name = "systematics-embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ONNX Runtime for embeddings
ort = "2.0.0-rc.2"

# Tokenization
tokenizers = "0.15"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Vector operations
ndarray = "0.15"

# File system
walkdir = "2"

# Async utilities
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
